--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
   <!-- Presenter Notes -->
 </slide>
 
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Slide 4: Example plot of a single country (e.g. England) over all the year of the World Cup (data: 1930 - 2006)</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><img src="assets/fig/unnamed-chunk-2.png" alt="plot of chunk unnamed-chunk-2"> </p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
     <slide class="backdrop"></slide>
   </slides>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
@@ -86,6 +97,12 @@
       <a href="#" target="_self" rel='tooltip' 
         data-slide=2 title='Slide 3: Example plot of each countries&#39; performance within a tournament (e.g. 1966)'>
          2
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=3 title='Slide 4: Example plot of a single country (e.g. England) over all the year of the World Cup (data: 1930 - 2006)'>
+         3
       </a>
     </li>
   </ul>
