--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="libraries/frameworks/io2012/css/slidify.css" >
   <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/tomorrow.css" />
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="libraries/widgets/interactive/css/aceeditor.css"></link>
+<link rel=stylesheet href="libraries/widgets/bootstrap/css/bootstrap.css"></link>
 <link rel=stylesheet href="./assets/css/ribbons.css"></link>
 
   
@@ -83,6 +84,54 @@
   <!-- Presenter Notes -->
 </slide>
 
+<slide class="" id="slide-4" style="background:;">
+  <hgroup>
+    <h2>Slide 5: Example calculation of percentage of matches won</h2>
+  </hgroup>
+  <article data-timings="">
+     
+<div class='row-fluid'>
+  <div class='span5'>
+    <form id="knitForm4" data-cell="4">
+      <p><textarea class='interactive' id='interactive4' data-cell='4' data-results='markup' style='display:none'>matches_won&lt;-5
+matches_drawn&lt;- 2
+matches_lost &lt;- 2
+matches_played &lt;- matches_won+matches_drawn+matches_lost
+percentage_wins &lt;- as.integer((matches_won/matches_played)*100)
+result &lt;-paste(&quot;Percentage of matches won = &quot; , percentage_wins)
+result</textarea></p>
+
+      <div id='aceeditor4' style="height:px;"></div>
+      <div class='interactive btn-toolbar pull-left'>
+        <div class='btn-group'>
+          <a class='btn btn-small action-button' id='runCode4' data-action='runCode'
+            data-cell='4' rel='tooltip' data-title='Run Code'>
+            <i class='icon-play'></i>
+          </a>
+          <a class='btn btn-small iBtn' id='testCode4' data-action='testCode'
+             data-cell='4' rel='tooltip' data-title='Test Code'>
+            <i class='icon-check'></i>
+          </a>
+          <a class='btn btn-small iBtn' id='clearResult4' data-action='clearResult'
+             data-cell='4' rel='tooltip' data-title='Clear Output'>
+            <i class="icon-remove"></i>
+          </a>
+          <a class='btn  btn-small iBtn' id='getHint4' rel='tooltip' 
+            data-title="Get Hint" data-action='getHint'
+            data-cell='4' data-hint="">
+            <i class="icon-bookmark"></i>
+          </a>
+        </div>
+      </div>    </form>
+  </div>
+  <div class='span7'>
+    <div id="knitResult4" class='shiny-html-output'></div>
+  </div>
+</div>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
     <slide class="backdrop"></slide>
   </slides>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
@@ -105,6 +154,12 @@
          3
       </a>
     </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Slide 5: Example calculation of percentage of matches won'>
+         4
+      </a>
+    </li>
   </ul>
   </div>  <!--[if IE]>
     <script 
@@ -116,12 +171,20 @@
   <!-- Load Javascripts for Widgets -->
   <script src="libraries/widgets/interactive/js/ace/js/ace.js"></script>
 <script src="libraries/widgets/interactive/js/interactive.js"></script>
+<script src="libraries/widgets/bootstrap/js/bootstrap.min.js"></script>
+<script src="libraries/widgets/bootstrap/js/bootbox.min.js"></script>
 
   <script src="shared/shiny.js" type="text/javascript"></script>
   <script src="shared/slider/js/jquery.slider.min.js"></script>
   <script src="shared/bootstrap/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="shared/slider/css/jquery.slider.min.css"></link>
   
+  <script>  
+  $(function (){ 
+    $("#example").popover(); 
+    $("[rel='tooltip']").tooltip(); 
+  });  
+  </script>  
   <!-- LOAD HIGHLIGHTER JS FILES -->
   <script src="libraries/highlighters/highlight.js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
