--- a/index.html
+++ b/index.html
@@ -132,6 +132,49 @@ result</textarea></p>
   <!-- Presenter Notes -->
 </slide>
 
+<slide class="" id="slide-5" style="background:;">
+  <hgroup>
+    <h2>Results = Markup</h2>
+  </hgroup>
+  <article data-timings="">
+     
+<div class='row-fluid'>
+  <div class='span5'>
+    <form id="knitForm5" data-cell="5">
+      <p><textarea class='interactive' id='interactive5' data-cell='5' data-results='markup' style='display:none'>x &lt;-11+12
+x</textarea></p>
+
+      <div id='aceeditor5' style="height:px;"></div>
+      <div class='interactive btn-toolbar pull-left'>
+        <div class='btn-group'>
+          <a class='btn btn-small action-button' id='runCode5' data-action='runCode'
+            data-cell='5' rel='tooltip' data-title='Run Code'>
+            <i class='icon-play'></i>
+          </a>
+          <a class='btn btn-small iBtn' id='testCode5' data-action='testCode'
+             data-cell='5' rel='tooltip' data-title='Test Code'>
+            <i class='icon-check'></i>
+          </a>
+          <a class='btn btn-small iBtn' id='clearResult5' data-action='clearResult'
+             data-cell='5' rel='tooltip' data-title='Clear Output'>
+            <i class="icon-remove"></i>
+          </a>
+          <a class='btn  btn-small iBtn' id='getHint5' rel='tooltip' 
+            data-title="Get Hint" data-action='getHint'
+            data-cell='5' data-hint="">
+            <i class="icon-bookmark"></i>
+          </a>
+        </div>
+      </div>    </form>
+  </div>
+  <div class='span7'>
+    <div id="knitResult5" class='shiny-html-output'></div>
+  </div>
+</div>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
     <slide class="backdrop"></slide>
   </slides>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
@@ -158,6 +201,12 @@ result</textarea></p>
       <a href="#" target="_self" rel='tooltip' 
         data-slide=4 title='Slide 5: Example calculation of percentage of matches won'>
          4
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=5 title='Results = Markup'>
+         5
       </a>
     </li>
   </ul>
