--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class='row-fluid'>
   <div class='span5'>
     <form id="knitForm4" data-cell="4">
-      <p><textarea class='interactive' id='interactive4' data-cell='4' data-results='markup' style='display:none'>matches_won&lt;-5
+      <p><textarea class='interactive' id='interactive4' data-cell='4' data-results='asis' style='display:none'>matches_won&lt;-5
 matches_drawn&lt;- 2
 matches_lost &lt;- 2
 matches_played &lt;- matches_won+matches_drawn+matches_lost
@@ -141,7 +141,7 @@ result</textarea></p>
 <div class='row-fluid'>
   <div class='span5'>
     <form id="knitForm5" data-cell="5">
-      <p><textarea class='interactive' id='interactive5' data-cell='5' data-results='markup' style='display:none'>x &lt;-11+12
+      <p><textarea class='interactive' id='interactive5' data-cell='5' data-results='asis' style='display:none'>x &lt;-11+12
 x</textarea></p>
 
       <div id='aceeditor5' style="height:px;"></div>
