Trying print command

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ matches_lost &lt;- 2
 matches_played &lt;- matches_won+matches_drawn+matches_lost
 percentage_wins &lt;- as.integer((matches_won/matches_played)*100)
 result &lt;-paste(&quot;Percentage of matches won = &quot; , percentage_wins)
-result</textarea></p>
+print(result)</textarea></p>
 
       <div id='aceeditor4' style="height:px;"></div>
       <div class='interactive btn-toolbar pull-left'>
