--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
 <div class='row-fluid'>
   <div class='span5'>
     <form id="knitForm4" data-cell="4">
-      <p><textarea class='interactive' id='interactive4' data-cell='4' data-results='asis' style='display:none'>matches_won&lt;-5
+      <p>This does not run in github but runs in Rstudio
+I think this is a recognised problem.
+See: <a href="https://github.com/ramnathv/slidify/issues/360">https://github.com/ramnathv/slidify/issues/360</a></p>
+
+<p><textarea class='interactive' id='interactive4' data-cell='4' data-results='asis' style='display:none'>matches_won&lt;-5
 matches_drawn&lt;- 2
 matches_lost &lt;- 2
 matches_played &lt;- matches_won+matches_drawn+matches_lost
