--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     b) A plot of percentage winds by a single country across all years</li>
 <li>Data downloaded from: 
     <a href="http://www.theguardian.com/news/datablog/2010/may/05/world-cup-historical-statistics">http://www.theguardian.com/news/datablog/2010/may/05/world-cup-historical-statistics</a></li>
+<li>The interactive Slide 5 does not run in github but runs in Rstudio
+I think this is a recognised problem. See: <a href="https://github.com/ramnathv/slidify/issues/360">https://github.com/ramnathv/slidify/issues/360</a></li>
 </ol>
 
   </article>
@@ -93,11 +95,7 @@
 <div class='row-fluid'>
   <div class='span5'>
     <form id="knitForm4" data-cell="4">
-      <p>This does not run in github but runs in Rstudio
-I think this is a recognised problem.
-See: <a href="https://github.com/ramnathv/slidify/issues/360">https://github.com/ramnathv/slidify/issues/360</a></p>
-
-<p><textarea class='interactive' id='interactive4' data-cell='4' data-results='asis' style='display:none'>matches_won&lt;-5
+      <p><textarea class='interactive' id='interactive4' data-cell='4' data-results='asis' style='display:none'>matches_won&lt;-5
 matches_drawn&lt;- 2
 matches_lost &lt;- 2
 matches_played &lt;- matches_won+matches_drawn+matches_lost
